# HDN

./: .gitignore  AGENTS.md  HDN_project_overview.md  LICENSE  README.md  TWR-LM_전체정리_및_실험설계_대화반영_개정본.txt  context.md  plan.md  pyproject.toml  requirements.txt
configs/: cifar10_hdn.json  mnist_hdn.json  toy_circles.json  toy_two_moons.json  toy_xor.json
configs/data/: count_compare.yaml  count_compare_long.yaml  hyperpartisan.yaml  imdb_long_debug.yaml  longbench_lsht.yaml  longbench_trec.yaml  lra_listops.yaml  ruler_needle.yaml  synthetic_parity.yaml
configs/experiment/: ablation_adaptive_depth.yaml  ablation_fixed_think.yaml  ablation_no_slot_gate.yaml  ablation_no_think.yaml  ablation_token_residual.yaml  ablation_write_one_shot.yaml  (+108 more)
experiments/: README.md
hdn.egg-info/: PKG-INFO  SOURCES.txt
scripts/: analyze_results.py  evaluate.py  prepare_local_datasets.py  pretrain_latent_encoder.py  run_ablation.py  run_benchmark_full_suite.py  run_benchmark_suite.py  run_benchmark_twr.py  run_compression_ablation_suite.py  run_count_compare_suite.py  run_four_benchmark_scaling_gmc.py  run_hierarchy_ablation_suite.py  run_imdb_long_debug.py  run_long_validation.py  run_ruler_scaling_suite.py  run_scale_memory_to_25m_100ep.py  run_scale_to_25m_100ep.py  run_twr_scaling_to_103m.py  train.py  validate_cpu.py
src/: __init__.py
tests/: test_config.py  test_config_loading.py  test_experiments.py  test_latent_encoder.py  test_mamba_placeholder.py  test_twr_forward.py  test_write_module.py
twr_codex_pack/: AGENTS.md  README.md  codex_master_prompt.md
(+454 files in other folders)
