[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdn"
version = "0.1.0"
description = "PyTorch prototype for Homeostatic Developmental Networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
